--- a/BUILD_MSVC2019/depress/depress.vcxproj
+++ b/BUILD_MSVC2019/depress/depress.vcxproj
@@ -272,6 +272,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\depress.c" />
+    <ClCompile Include="..\..\src\depress_converter.c" />
+    <ClCompile Include="..\..\src\depress_image.c" />
+    <ClCompile Include="..\..\src\depress_paths.c" />
+    <ClCompile Include="..\..\src\depress_tasks.c" />
+    <ClCompile Include="..\..\src\depress_threads.c" />
     <ClCompile Include="..\..\src\ppm_save.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
