Add dummy page title flag and do some refactoring

--- a/BUILD_MSVC2013/depress/depress.vcxproj
+++ b/BUILD_MSVC2013/depress/depress.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\depress.c" />
     <ClCompile Include="..\..\src\depress_converter.c" />
+    <ClCompile Include="..\..\src\depress_document.c" />
     <ClCompile Include="..\..\src\depress_image.c" />
     <ClCompile Include="..\..\src\depress_paths.c" />
     <ClCompile Include="..\..\src\depress_tasks.c" />
