--- a/BUILD_MSVC2019/depress/depress.vcxproj.filters
+++ b/BUILD_MSVC2019/depress/depress.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="..\..\src\depress_threads.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\depress_document.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
