Add app manifest, use onecore.lib in 2019

--- a/BUILD_MSVC2013/depress/depress.vcxproj.filters
+++ b/BUILD_MSVC2013/depress/depress.vcxproj.filters
@@ -40,4 +40,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\..\resources\applications.manifest" />
+  </ItemGroup>
 </Project>
