--- a/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\..\resources\applications.manifest" />
+  </ItemGroup>
 </Project>
