--- a/BUILD_MSVC2013/depress/depress.vcxproj
+++ b/BUILD_MSVC2013/depress/depress.vcxproj
@@ -152,6 +152,9 @@
     <ClCompile Include="..\..\src\depress_threads.c" />
     <ClCompile Include="..\..\src\ppm_save.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\..\resources\applications.manifest" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
