--- a/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Исходные файлы\core">
+      <UniqueIdentifier>{5f0c0855-1322-4aab-b4f5-9bcc2b4fc10e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\depressed.cpp">
@@ -22,24 +25,30 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_converter.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_document.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_image.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_paths.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_tasks.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\depress_threads.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\core</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\ppm_save.c">
+      <Filter>Исходные файлы\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\depressed_open.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\depressed_page.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
