Move interlocked operations to separate file

--- a/BUILD_MSVC2019/depress/depress.vcxproj.filters
+++ b/BUILD_MSVC2019/depress/depress.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\..\src\depress_document.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\interlocked_ptr.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="..\..\resources\applications.manifest" />
