--- a/BUILD_UNIX_MAKEFILE/makefile
+++ b/BUILD_UNIX_MAKEFILE/makefile
@@ -5,8 +5,8 @@ CPPFLAGS=-pthread
 
 all: depress
 
-depress: depress.o depress_converter.o depress_document.o depress_image.o depress_paths.o depress_tasks.o depress_threads.o ppm_save.o interlocked_ptr.o waccess.o wfopen.o wmain_stdc.o wmkdir.o wpopen.o wremove.o wrmdir.o wtoi.o wcstombsl.o
-	$(CPP) $(CPPFLAGS) depress.o depress_converter.o depress_document.o depress_image.o depress_paths.o depress_tasks.o depress_threads.o ppm_save.o interlocked_ptr.o waccess.o wfopen.o wmain_stdc.o wmkdir.o wpopen.o wremove.o wrmdir.o wtoi.o wcstombsl.o -o depress
+depress: depress.o depress_converter.o depress_document.o depress_image.o depress_paths.o depress_tasks.o depress_threads.o ppm_save.o interlocked_ptr.o waccess.o wfopen.o wmain_stdc.o wmkdir.o wpopen.o wremove.o wrmdir.o wcstombsl.o
+	$(CPP) $(CPPFLAGS) depress.o depress_converter.o depress_document.o depress_image.o depress_paths.o depress_tasks.o depress_threads.o ppm_save.o interlocked_ptr.o waccess.o wfopen.o wmain_stdc.o wmkdir.o wpopen.o wremove.o wrmdir.o wcstombsl.o -o test
 	
 depress.o:
 	$(CC) $(CFLAGS) ../src/depress.c
@@ -36,31 +36,28 @@ interlocked_ptr.o:
 	$(CC) $(CFLAGS) ../src/interlocked_ptr.c
 	
 waccess.o:
-	$(CC) $(CFLAGS) ../unixsupport/waccess.c
+	$(CC) $(CFLAGS) ../src/unixsupport/waccess.c
 	
 wfopen.o:
-	$(CC) $(CFLAGS) ../unixsupport/wfopen.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wfopen.c
 	
 wmain_stdc.o:
-	$(CC) $(CFLAGS) ../unixsupport/wmain_stdc.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wmain_stdc.c
 	
 wmkdir.o:
-	$(CC) $(CFLAGS) ../unixsupport/wmkdir.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wmkdir.c
 	
 wpopen.o:
-	$(CC) $(CFLAGS) ../unixsupport/wpopen.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wpopen.c
 	
 wremove.o:
-	$(CC) $(CFLAGS) ../unixsupport/wremove.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wremove.c
 	
 wrmdir.o:
-	$(CC) $(CFLAGS) ../unixsupport/wrmdir.c
-	
-wtoi.o:
-	$(CC) $(CFLAGS) ../unixsupport/wtoi.c
+	$(CC) $(CFLAGS) ../src/unixsupport/wrmdir.c
 	
 wcstombsl.o:
-	$(CC) $(CFLAGS) ../extclib/wcstombsl.c
+	$(CC) $(CFLAGS) ../src/extclib/wcstombsl.c
 	
 clean:
 	rm -f *.o depress
