Add gui via IUP, refactoring, temporarily fix Rect on bw

--- a/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="..\..\src\interlocked_ptr.c">
       <Filter>Исходные файлы\core</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\depressed_console.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\depressed_gui.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="..\..\resources\applications.manifest" />
