--- a/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\..\src\depressed_gui.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\depressed_gui_maindlg.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="..\..\resources\applications.manifest" />
