Start making flags dialogs

--- a/BUILD_MSVC2019/depressed/depressed.vcxproj
+++ b/BUILD_MSVC2019/depressed/depressed.vcxproj
@@ -285,7 +285,9 @@
     <ClCompile Include="..\..\src\depressed_console.cpp" />
     <ClCompile Include="..\..\src\depressed_document.cpp" />
     <ClCompile Include="..\..\src\depressed_gui.cpp" />
+    <ClCompile Include="..\..\src\depressed_gui_documentflags.cpp" />
     <ClCompile Include="..\..\src\depressed_gui_maindlg.cpp" />
+    <ClCompile Include="..\..\src\depressed_gui_pageflags.cpp" />
     <ClCompile Include="..\..\src\depressed_open.cpp" />
     <ClCompile Include="..\..\src\depressed_page.cpp" />
     <ClCompile Include="..\..\src\depress_converter.c" />
